--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
   background-color: white;
   padding: 16px 16px 0 16px;
   border-radius: 20px;
-  box-shadow: 0 8px 15px rgba(0 0 0 0.2);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
 .card-textbox {
